# chenhui-lib

./: .gitignore  CMakeLists.txt  MpmTest.cpp  README.md  learn_opengl.cpp  main  main.cpp  testEigen.cpp
Math/: CMakeLists.txt  LinearSystemSolver.cpp  LinearSystemSolver.h  SVD.cpp  SVD.h  testMath.cpp
MyRenderer/: CMakeLists.txt  Camera.h  Geometry.h  Intersection.h  Light.h  Material.h  Ray.h  Utils.h  Vec3.h  main.cpp
MyRenderer/test/: AntiAliasingTest.cpp  BlinnPhongShading.cpp  FinalScene.cpp  FuzzyTest.cpp  LambertianShadingTest.cpp  MaterialClassTest.cpp  RayCircleIntersect.cpp  RayIntersectMultiObjects.cpp  RayPolygonIntersect.cpp  RayTriIntersect.cpp  RecursiveRay.cpp  SurfaceNormal.cpp  VecTest.cpp
Physics/: CMakeLists.txt  MassSpringSim.cpp  MassSpringSim.h
Physics/MPM/: AnisoClothMpmSimulation.cpp  AnisoClothMpmSimulation.h  ConstitutionModel.cpp  ConstitutionModel.h  MpmGrid.cpp  MpmGrid.h  MpmParticle.cpp  MpmParticle.h  MpmSimulation.cpp  MpmSimulation.h  MpmSimulationBase.cpp  MpmSimulationBase.h  MpmUtils.cpp  MpmUtils.h  SandMpmSimulation.cpp  SandMpmSimulation.h
Renderer/: CMakeLists.txt  Camera.h  Particle.cpp  Particle.h  RenderConfig.h  Scene.cpp  Scene.h  Shader.h  Texture.cpp  Texture.h
Renderer/Buffer/: FrameBuffer.cpp  FrameBuffer.h  IBuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
resources/shader/: BlinnPhong.frag  BlinnPhong.vert  particle.frag  particle.vert  triangle.frag  triangle.vert
scripts/: jsx2md.py
